# npu-json

./: .editorconfig  .gitignore  ALGORITHM.md  Justfile  NOTES.md  README.md  STATE.md  TODO.md  bench.sh  env.sh  install-iron.sh  meson.build  meson.options  requirements-extras.txt  requirements-mlir.txt  requirements.txt  vitis.env
benchmark-results/: chunksize-throughput.tsv  plot_chunksize_throughput.py  plot_scaling_benchmark.py  plot_selectivity_benchmark.py  plot_throughput.py  scaling_benchmark_results.tsv  selectivity_benchmark_results.tsv  throughput-8845.tsv  throughput-hx370.tsv  turbo-on-chunksize-throughput.csv
datasets/: .gitignore  README.md  checksums.sha256  datasets.tsv  download.sh
src/aie/: gen_mlir_design.py  gen_mlir_matrix_design.py  json.cc  json_matrix_xdna1.cc  json_matrix_xdna2.cc  json_xdna1.cc  json_xdna2.cc  matrix_meson.build  meson.build
src/npu-json/: engine.cpp  engine.hpp  error.hpp  main.cpp  options.hpp  result-set.cpp  result-set.hpp
src/npu-json/jsonpath/: byte-code.cpp  byte-code.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  query.hpp
src/npu-json/matrix/: kernel.cpp  kernel.hpp  matrix.hpp  ops.cpp  ops.hpp  pipeline.cpp  pipeline.hpp
src/npu-json/matrix/npu/: kernel.cpp  kernel.hpp  pipeline.cpp  pipeline.hpp
src/npu-json/npu/: chunk-index.hpp  indexer.cpp  indexer.hpp  iterator.hpp  kernel.cpp  kernel.hpp  pipeline.cpp  pipeline.hpp  queue.hpp
src/npu-json/structural/: classifier.cpp  classifier.hpp  iterator.cpp  iterator.hpp
src/npu-json/util/: debug.hpp  files.hpp  strings.hpp  tracer.cpp  tracer.hpp  xrt.hpp
subprojects/: .gitignore
subprojects/xrt/: meson.build
test/: .gitignore  meson.build  test_utils.hpp
test/e2e/: run_big_e2e.sh  run_small_e2e.sh
test/multiple-kernels/: Makefile  gen_mlir_design.py  kernels.cc  test.cpp
test/npu/: string_index_test.cpp
test/npu/fixtures/: basic.txt
test/unit/: cpu_backend_test.cpp  escape_carry_index_test.cpp  jsonpath_parser_test.cpp  matrix_backend_test.cpp  npu_matrix_backend_test.cpp  structural_character_index_test.cpp  structural_classifier_test.cpp
test/util/: test-iterator.cpp  test-iterator.hpp
traces/: plot_detailed_breakdown.py  plot_query_indexing_utilization.py  traces-b1.csv  traces-b2.csv  traces-g1.csv  traces-g2.csv  traces-n1.csv  traces-n2.csv  traces-t1.csv  traces-t2.csv  traces-w1.csv  traces-wi.csv
util/: bench_distribution.py  calculate_throughputs.py  calculate_utilization.py  generate_artificial_dataset.py  plot_bench_results.py  plot_chunk_size_line_chart.py  plot_experiment_line_chart.py  plot_trace.py  plot_utilization.py  trace_component_breakdown.py  verify_figure.cpp
